# django-rest-external-db

./: .gitignore  README.md  hidden.txt
api/: pyproject.toml
api/api/: settings.py  urls.py
api/app/: models.py  serializers.py  views.py
api/app/migrations/: 0001_initial.py
client/: fetch.js  index.js  package-lock.json  package.json
client/views/: index.pug
db/: README.md
